# FEM-Code-C-

./: CMakeLists.txt  main.cpp
Element/: Element.cpp  Element.h
Initialize/: Initialize.cpp  Initialize.hpp
Node/: Node.cpp  Node.hpp
Preprocess/: Mesh_1D.cpp  Mesh_1D.hpp  Mesh_1d.hpp
Problem/: problem.cpp  problem.hpp
eigen-3.4.0/bench/btl/generic_bench/static/: intel_bench_fixed_size.hh  static_size_generator.hh
eigen-3.4.0/bench/btl/generic_bench/timers/: STL_timer.hh
eigen-3.4.0/bench/btl/generic_bench/utils/: size_lin_log.hh
